--- a/Restaurant Website/about.html
+++ b/Restaurant Website/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raaga Restaurant</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" 
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" 
@@ -18,12 +18,12 @@
         <nav id="header-nav" class="navbar navbar-default">
             <div class="container">
                 <div class="navbar-header">
-                    <a href="../index.html" class="pull-left visible-md visible-lg">
+                    <a href="index.html" class="pull-left visible-md visible-lg">
                         <div id="logo-img"></div>
                     </a>
                     
                     <div class="navbar-brand">
-                        <a href="../index.html"><h1>Raaga.....</h1></a>
+                        <a href="index.html"><h1>Raaga.....</h1></a>
                         <p>
                             <span>Thali & Vegetarian/Non-Vegetarian Restaurant</span>
                         </p>
@@ -41,12 +41,12 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                         <li class="visible-xs">
-                            <a href="../index.html">
+                            <a href="index.html">
                                 <span class="glyphicon glyphicon-home"></span> Home
                             </a>
                         </li>
                         <li>
-                            <a href="../menu-categories.html">
+                            <a href="menu-categories.html">
                                 <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu
                             </a>
                         </li>
