--- a/Restaurant Website/menu-categories.html
+++ b/Restaurant Website/menu-categories.html
@@ -212,7 +212,7 @@
 
     <!-- jQuery (Bootstrap JS plugins depend on it)-->
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
