--- a/Payment Gateway Integration/index.html
+++ b/Payment Gateway Integration/index.html
@@ -19,7 +19,7 @@
         rel="stylesheet">
 
     <!--Favicon for (Chrome Tab Image)-->
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Projects/Payment Gateway Integration/images/favicon-32x32.png">
 
 </head>
 
