--- a/Payment Gateway Integration/index.html
+++ b/Payment Gateway Integration/index.html
@@ -19,7 +19,7 @@
         rel="stylesheet">
 
     <!--Favicon for (Chrome Tab Image)-->
-    <link rel="icon" type="image/png" sizes="32x32" href="Projects/Payment Gateway Integration/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
 </head>
 
@@ -74,7 +74,7 @@
                         onclick="window.location.href = 'https://rzp.io/l/WEzqaKw';">Donate Now!</button>
                 </div>
                 <div class="col-md-5 col-sm-12 h-25">
-                    <img src="/images/donateMoney557.jpg" alt="Donate">
+                    <img src="images/donateMoney557.jpg" alt="Donate">
                 </div>
             </div>
         </div>
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="sparks">
-                            <img src="/images/theSparksFoundation1920.png" alt="sparks">
+                            <img src="images/theSparksFoundation1920.png" alt="sparks">
                         </div>
                     </div>
                     <div class="col-md-6">
